--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                           <img class="l" src="./pic/html.png" >
                         </div>
                         <div class="boxs2">
-                          <img class="l"  src="./pic/c-.png" >
+                          <img class="l"  src="./pic/css-3.png" >
                         </div>
                         <div class="boxs3">
                           <img class="l" src="./pic/js.png" >
